final changes in week 3

--- a/example-ui/ui2/add-cat.html
+++ b/example-ui/ui2/add-cat.html
@@ -31,7 +31,7 @@
                     <select class="light-border add-owner" name="owner">
                         <option value="">Select owner</option>
                     </select>
-                    <input class="light-border" type="file" name="cat" accept="image/*" placeholder="Choose file">
+                    <input class="light-border" type="file" name="cat" required accept="image/*" placeholder="Choose file">
                     <button class="light-border" type="submit">Upload</button>
                 </form>
             </div>
